fixed spacing

--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -216,6 +216,7 @@ body {
   display: flex;
   align-items: center;
   gap: 8rem;
+  height: 35rem;
 
   @media (max-width: 1200px) {
     flex-direction: column-reverse;
@@ -299,8 +300,9 @@ body {
 
 .skills {
   display: flex;
-  // align-items: center;
+  align-items: center;
   bottom: 0;
+  left: 0;
   font-size: 1.3rem;
   font-weight: 600;
   font-family: poppins, sans-serif, bold;
@@ -319,7 +321,8 @@ body {
 
     @media (max-width: 1200px) {
       justify-content: center;
-      padding: 0;
+      padding: 3rem 0 0 0;
+      position: absolute;
     }
   }
 
